--- a/04_banco_de_dados/docker-compose.yml
+++ b/04_banco_de_dados/docker-compose.yml
@@ -13,4 +13,4 @@ services:
     ports:
       - 3306:3306
     volumes:
-      - "./schema.sql:/docker-entrypoint-initdb.d/schema.sql"
+      - "./modulos/schema.sql:/docker-entrypoint-initdb.d/schema.sql"
